# walrust

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
src/: commit.rs  config.rs  filesystem.rs  lib.rs  repository.rs  repository_locator.rs
tests/: config_tests.rs  mock_filesystem.rs  mock_git_repository.rs  repository_locator_tests.rs  repository_tests.rs
