[package]
name = "walrust"
version = "0.1.0"
edition = "2021"
authors = ["Cory Todd <cory@corytodd.us>"]
description = "🦭  Git commit queries at Walrus speed"
license = "MIT"
repository = "https://github.com/corytodd/walrust"
homepage = "https://github.com/corytodd/walrust"
documentation = "https://github.com/corytodd/walrust#readme"
keywords = ["git", "cli", "commit", "query"]
categories = ["command-line-utilities", "version-control"]
readme = "README.md"

[dependencies]
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
git2 = "0.16"

[dev-dependencies]
lazy_static = "1.5.0"

[lib]
name = "walrust"
path = "src/lib.rs"

[[bin]]
name = "walrust"
path = "src/bin/walrust.rs"
